alterando lógica de "viagem no tempo"